Changed infinite iterations's representation from -1 to infinity().

In blink we use -1 to represent infinite iterations for historical
reasons. Rather, we should use std::numeric_limits<double>::infinity()
to be more specification-complaint.

CL based on crrev.com/c/1373409.

Bug: 913662
Change-Id: I3b2ff0c44d36c03654d77784c3867555603b0576
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/2071100
Reviewed-by: Ian Vollick <vollick@chromium.org>
Reviewed-by: Majid Valipour <majidvp@chromium.org>
Reviewed-by: Yi Gu <yigu@chromium.org>
Reviewed-by: Daniel Libby <dlibby@microsoft.com>
Commit-Queue: Annie Liu <t-hunliu@microsoft.com>
Cr-Commit-Position: refs/heads/master@{#748383}