cc/animation/keyframe_model_unittest.cc
@@ -95,7 +95,8 @@ TEST(KeyframeModelTest, TrimTimeOneHalfIteration) {
 }
 
 TEST(KeyframeModelTest, TrimTimeInfiniteIterations) {
-  std::unique_ptr<KeyframeModel> keyframe_model(CreateKeyframeModel(-1));
+  std::unique_ptr<KeyframeModel> keyframe_model(
+      CreateKeyframeModel(std::numeric_limits<double>::infinity()));
   EXPECT_EQ(0.0,
             keyframe_model->TrimTimeToCurrentIteration(TicksFromSecondsF(0.0))
                 .InSecondsF());
@@ -111,7 +112,8 @@ TEST(KeyframeModelTest, TrimTimeInfiniteIterations) {
 }
 
 TEST(KeyframeModelTest, TrimTimeReverse) {
-  std::unique_ptr<KeyframeModel> keyframe_model(CreateKeyframeModel(-1));
+  std::unique_ptr<KeyframeModel> keyframe_model(
+      CreateKeyframeModel(std::numeric_limits<double>::infinity()));
   keyframe_model->set_direction(KeyframeModel::Direction::REVERSE);
   EXPECT_EQ(1.0,
             keyframe_model->TrimTimeToCurrentIteration(TicksFromSecondsF(0))
@@ -134,7 +136,8 @@ TEST(KeyframeModelTest, TrimTimeReverse) {
 }
 
 TEST(KeyframeModelTest, TrimTimeAlternateInfiniteIterations) {
-  std::unique_ptr<KeyframeModel> keyframe_model(CreateKeyframeModel(-1));
+  std::unique_ptr<KeyframeModel> keyframe_model(
+      CreateKeyframeModel(std::numeric_limits<double>::infinity()));
   keyframe_model->set_direction(KeyframeModel::Direction::ALTERNATE_NORMAL);
   EXPECT_EQ(0.0,
             keyframe_model->TrimTimeToCurrentIteration(TicksFromSecondsF(0.0))
@@ -250,7 +253,8 @@ TEST(KeyframeModelTest, TrimTimeAlternateTwoHalfIterations) {
 }
 
 TEST(KeyframeModelTest, TrimTimeAlternateReverseInfiniteIterations) {
-  std::unique_ptr<KeyframeModel> keyframe_model(CreateKeyframeModel(-1));
+  std::unique_ptr<KeyframeModel> keyframe_model(
+      CreateKeyframeModel(std::numeric_limits<double>::infinity()));
   keyframe_model->set_direction(KeyframeModel::Direction::ALTERNATE_REVERSE);
   EXPECT_EQ(1.0,
             keyframe_model->TrimTimeToCurrentIteration(TicksFromSecondsF(0.0))
@@ -651,7 +655,8 @@ TEST(KeyframeModelTest, IsFinishedAtOneIteration) {
 }
 
 TEST(KeyframeModelTest, IsFinishedAtInfiniteIterations) {
-  std::unique_ptr<KeyframeModel> keyframe_model(CreateKeyframeModel(-1));
+  std::unique_ptr<KeyframeModel> keyframe_model(
+      CreateKeyframeModel(std::numeric_limits<double>::infinity()));
   keyframe_model->SetRunState(KeyframeModel::RUNNING, TicksFromSecondsF(0.0));
   EXPECT_FALSE(keyframe_model->IsFinishedAt(TicksFromSecondsF(0.0)));
   EXPECT_FALSE(keyframe_model->IsFinishedAt(TicksFromSecondsF(0.5)));
@@ -883,7 +888,8 @@ TEST(KeyframeModelTest, TrimTimePlaybackFastReverse) {
 }
 
 TEST(KeyframeModelTest, TrimTimePlaybackFastInfiniteIterations) {
-  std::unique_ptr<KeyframeModel> keyframe_model(CreateKeyframeModel(-1, 4, 4));
+  std::unique_ptr<KeyframeModel> keyframe_model(
+      CreateKeyframeModel(std::numeric_limits<double>::infinity(), 4, 4));
   EXPECT_EQ(0,
             keyframe_model->TrimTimeToCurrentIteration(TicksFromSecondsF(0.0))
                 .InSecondsF());
@@ -1325,7 +1331,8 @@ TEST(KeyframeModelTest, InEffectFillModeWithIterations) {
 }
 
 TEST(KeyframeModelTest, InEffectFillModeWithInfiniteIterations) {
-  std::unique_ptr<KeyframeModel> keyframe_model(CreateKeyframeModel(-1, 1));
+  std::unique_ptr<KeyframeModel> keyframe_model(
+      CreateKeyframeModel(std::numeric_limits<double>::infinity(), 1));
   keyframe_model->set_fill_mode(KeyframeModel::FillMode::NONE);
   EXPECT_FALSE(keyframe_model->InEffect(TicksFromSecondsF(-1.0)));
   EXPECT_TRUE(keyframe_model->InEffect(TicksFromSecondsF(0.0)));
